test/testdata/variables/blank_access_error.lox
// error: _ cannot be used as a value
// lint error: _ cannot be used as a value
print _;
